--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
     <nav class="navbar">
         <a href="index.html" class="logo">Quantum Computing for Smart Cities</a>
         <div class="nav-buttons">
-            <a href="ct.html" class="nav-btn">Traffic Optimization</a>
+            <a href="index.html" class="nav-btn">Traffic Optimization</a>
             <a href="Em.html" class="nav-btn">Energy management</a>
         </div>
     </nav>
